# MedicalSystem

./: .gitignore.txt  CMakeLists.txt  README.md
010001TcpServer/010001TcpServer/: 010001TcpServer.pro  hospital_app.db  hospital_management.db  widget.cpp  widget.h  widget.ui
HTML界面设计/: hospital_ui_redesign (1).html  个人信息-豆包.html  初诊病历记录（纸质风格_可打印）.html  医嘱单（处方风格_可打印）.html  医患沟通_对话界面（亮色）.html  智慧医疗系统界面设计(1).docx  智慧医疗系统界面设计.docx  查看医嘱_医嘱列表（亮色emr风格）.html  病理与检验指标（亮色）.html  线上支付（医院费用）_亮色风格.html  门诊医生与就诊价格列表（亮色）.html  预约就诊_亮色html界面.html
MedicalSystem/: CMakeLists.txt  run.sh
MedicalSystem/src/app/: main.cpp
MedicalSystem/src/core/service/: LoginHandler.cpp  LoginHandler.h
MedicalSystem/src/ui/qml/: main.qml  qml.qrc
MedicalSystem/src/ui/qml/components/: CustomTextInput.qml
MedicalSystem/src/ui/qml/pages/: AuthPage.qml  LoginForm.qml  RegisterForm.qml
MedicalSystem/src/ui/qml/style/: Constants.qml
MedicalSystemVersionTwo/: CMakeLists.txt  main.cpp
MedicalSystemVersionTwo/src/ui/widgets/: widget.cpp  widget.h
MedicalSystemVersionTwo/src/ui/widgets/common/: login_dialog.cpp  login_dialog.h
MedicalSystemVersionTwo/src/ui/widgets/patient/: appointment_booking_widget.cpp  appointment_booking_widget.h  appointment_dialog.cpp  appointment_dialog.h  communication_widget.cpp  communication_widget.h  doctor_info_widget.cpp  doctor_info_widget.h  doctor_list_widget.cpp  doctor_list_widget.h  drugsearch.cpp  drugsearch.h  health_assessment_widget.cpp  health_assessment_widget.h  medical_records_widget.cpp  medical_records_widget.h  medicine_search_widget.cpp  medicine_search_widget.h  online_payment_widget.cpp  online_payment_widget.h  patient_main_window.cpp  patient_main_window.h  payment_success_dialog.cpp  payment_success_dialog.h  profile_widget.cpp  profile_widget.h
cursor2/: CMakeLists.txt  README.md
cursor2/qml/: main.qml  qml.qrc
cursor2/qml/fonts/: README.md
cursor2/src/: LoginWindow.cpp  LoginWindow.h  main.cpp
medDatabase/medDatabase/: mainwindow.cpp  mainwindow.ui  medDatabase.pro  res.qrc
src/server/core/dao/: user_dao.cpp
